--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
     "node": ">=6"
   },
   "scripts": {
-    "start": "node index.js"
-  }
+    "start": "node index.js",
+    "lint": "eslint ."
+  },
+  "devDependencies": {
+    "eslint": "3.15.0",
+    "eslint-config-google": "0.7.1",
+    "precommit-hook-eslint": "3.0.0"
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
