--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,10 @@
   },
   "extends": "google",
   "rules": {
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "max-len": [
+      "error",
+      100
+    ]
   }
 }
