--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   },
   "pre-commit": [
     "lint"
-  ]
+  ],
+  "dependencies": {
+    "request": "2.79.0",
+    "request-promise-native": "1.0.3"
+  }
 }
